fix blurry canvas

--- a/src/style/snake.css
+++ b/src/style/snake.css
@@ -289,7 +289,7 @@ body{
     color: rgb(230, 200, 160);
     display: block;
     font-family: 'Satisfy', cursive;
-    font-size: 3vh;
+    font-size: 2.5vh;
 }
 
 .modal-footer, .modal-header {
